added JS and more html

--- a/Develop/index.html
+++ b/Develop/index.html
@@ -31,7 +31,99 @@
     <div class="container">
   
       <!-- Timeblocks go here -->
-      
+      <div class="row justify-content-center">
+        <div class="col-md-10">
+          <!-- 9 am -->
+          <div class= "input-group row time-block">
+            <div class="input-group-prepend">
+              <span class="input-group-text hour">09:00 AM</span>
+            </div>
+              <textarea class="form-control info description" id="9am-events"></textarea>
+            <div class="input-group-append">
+              <button class="btn saveBtn" data-id="9am"  type="button"><i class="material-icons">Save</i></button>
+            </div>
+          </div>
+            <!-- 10am -->
+          <div class= "input-group row time-block">
+            <div class="input-group-prepend">
+              <span class="input-group-text hour">10:00 AM</span>
+            </div>
+              <textarea class=" form-control info description" id="9am-events"></textarea>
+            <div class="input-group-append">
+              <button class="btn saveBtn" data-id="9am"  type="button"><i class="material-icons">Save</i></button>
+            </div>
+          </div>
+            <!-- 11am -->
+          <div class= "input-group row time-block">
+            <div class="input-group-prepend">
+              <span class="input-group-text hour">11:00 AM</span>
+            </div>
+              <textarea class=" form-control info description" id="9am-events"></textarea>
+            <div class="input-group-append">
+              <button class="btn saveBtn" data-id="9am"  type="button"><i class="material-icons">Save</i></button>
+            </div>
+          </div>
+            <!-- 12pm -->
+          <div class= "input-group row time-block">
+            <div class="input-group-prepend">
+              <span class="input-group-text hour">12:00 PM</span>
+            </div>
+              <textarea class=" form-control info description" id="9am-events"></textarea>
+            <div class="input-group-append">
+              <button class="btn saveBtn" data-id="9am"  type="button"><i class="material-icons">Save</i></button>
+            </div>
+          </div>
+            <!-- 1pm -->
+          <div class= "input-group row time-block">
+            <div class="input-group-prepend">
+              <span class="input-group-text hour">01:00 PM</span>
+            </div>
+              <textarea class=" form-control info description" id="9am-events"></textarea>
+            <div class="input-group-append">
+              <button class="btn saveBtn" data-id="9am"  type="button"><i class="material-icons">Save</i></button>
+            </div>
+          </div>
+            <!-- 2pm -->
+          <div class= "input-group row time-block">
+            <div class="input-group-prepend">
+              <span class="input-group-text hour">02:00 PM</span>
+            </div>
+              <textarea class=" form-control info description" id="9am-events"></textarea>
+            <div class="input-group-append">
+              <button class="btn saveBtn" data-id="9am"  type="button"><i class="material-icons">Save</i></button>
+            </div>
+          </div>
+            <!-- 3pm -->
+          <div class= "input-group row time-block">
+            <div class="input-group-prepend">
+              <span class="input-group-text hour">03:00 PM</span>
+            </div>
+              <textarea class=" form-control info description" id="9am-events"></textarea>
+            <div class="input-group-append">
+              <button class="btn saveBtn" data-id="9am"  type="button"><i class="material-icons">Save</i></button>
+            </div>
+          </div>
+            <!-- 4pm -->
+          <div class= "input-group row time-block">
+            <div class="input-group-prepend">
+              <span class="input-group-text hour">04:00 PM</span>
+            </div>
+              <textarea class=" form-control info description" id="9am-events"></textarea>
+            <div class="input-group-append">
+              <button class="btn saveBtn" data-id="9am"  type="button"><i class="material-icons">Save</i></button>
+            </div>
+          </div>
+            <!-- 5pm -->
+          <div class= "input-group row time-block">
+            <div class="input-group-prepend">
+              <span class="input-group-text hour">05:00 PM</span>
+            </div>
+              <textarea class=" form-control info description" id="9am-events"></textarea>
+            <div class="input-group-append">
+              <button class="btn saveBtn" data-id="9am"  type="button"><i class="material-icons">Save</i></button>
+            </div>
+          </div>
+             
     </div>
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
