--- a/Develop/index.html
+++ b/Develop/index.html
@@ -1,32 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-    />
-    <link
-      rel="stylesheet"
-      href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
-      integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"
-      crossorigin="anonymous"
-    />
-    <link
-      href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="style.css" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans&amp;display=swap" 
+    rel="stylesheet">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.18.1/moment.min.js"></script>
+    <link rel="stylesheet" href="./style.css">
     <title>Work Day Scheduler</title>
-  </head>
+  </head>>
 
   <body>
     <header class="jumbotron">
       <h1 class="display-3">Work Day Scheduler</h1>
       <p class="lead">A simple calendar app for scheduling your work day</p>
-      <p id="time" class="lead"></p>
+      <p id="currentDay" class="lead"></p>
     </header>
     <div class="container">
   
@@ -34,7 +25,7 @@
       <div class="row justify-content-center">
         <div class="col-md-10">
           <!-- 9 am -->
-          <div class= "input-group row time-block">
+          <div class= "input-group row time-block data-time="8"">
             <div class="input-group-prepend">
               <span class="input-group-text hour">09:00 AM</span>
             </div>
@@ -44,90 +35,92 @@
             </div>
           </div>
             <!-- 10am -->
-          <div class= "input-group row time-block">
+          <div class= "input-group row time-block data-time="9"">
             <div class="input-group-prepend">
               <span class="input-group-text hour">10:00 AM</span>
             </div>
-              <textarea class=" form-control info description" id="9am-events"></textarea>
+              <textarea class="form-control info description" id="9am-events"></textarea>
             <div class="input-group-append">
               <button class="btn saveBtn" data-id="9am"  type="button"><i class="material-icons">Save</i></button>
             </div>
           </div>
             <!-- 11am -->
-          <div class= "input-group row time-block">
+          <div class= "input-group row time-block data-time="10"">
             <div class="input-group-prepend">
               <span class="input-group-text hour">11:00 AM</span>
             </div>
-              <textarea class=" form-control info description" id="9am-events"></textarea>
+              <textarea class="form-control info description" id="9am-events"></textarea>
             <div class="input-group-append">
               <button class="btn saveBtn" data-id="9am"  type="button"><i class="material-icons">Save</i></button>
             </div>
           </div>
             <!-- 12pm -->
-          <div class= "input-group row time-block">
+          <div class= "input-group row time-block data-time="11"">
             <div class="input-group-prepend">
               <span class="input-group-text hour">12:00 PM</span>
             </div>
-              <textarea class=" form-control info description" id="9am-events"></textarea>
+              <textarea class="form-control info description" id="9am-events"></textarea>
             <div class="input-group-append">
               <button class="btn saveBtn" data-id="9am"  type="button"><i class="material-icons">Save</i></button>
             </div>
           </div>
             <!-- 1pm -->
-          <div class= "input-group row time-block">
+          <div class= "input-group row time-block data-time="12"">
             <div class="input-group-prepend">
               <span class="input-group-text hour">01:00 PM</span>
             </div>
-              <textarea class=" form-control info description" id="9am-events"></textarea>
+              <textarea class="form-control info description" id="9am-events"></textarea>
             <div class="input-group-append">
               <button class="btn saveBtn" data-id="9am"  type="button"><i class="material-icons">Save</i></button>
             </div>
           </div>
             <!-- 2pm -->
-          <div class= "input-group row time-block">
+          <div class= "input-group row time-block data-time="13"">
             <div class="input-group-prepend">
               <span class="input-group-text hour">02:00 PM</span>
             </div>
-              <textarea class=" form-control info description" id="9am-events"></textarea>
+              <textarea class="form-control info description" id="9am-events"></textarea>
             <div class="input-group-append">
               <button class="btn saveBtn" data-id="9am"  type="button"><i class="material-icons">Save</i></button>
             </div>
           </div>
             <!-- 3pm -->
-          <div class= "input-group row time-block">
+          <div class= "input-group row time-block data-time="14"">
             <div class="input-group-prepend">
               <span class="input-group-text hour">03:00 PM</span>
             </div>
-              <textarea class=" form-control info description" id="9am-events"></textarea>
+              <textarea class="form-control info description" id="9am-events"></textarea>
             <div class="input-group-append">
               <button class="btn saveBtn" data-id="9am"  type="button"><i class="material-icons">Save</i></button>
             </div>
           </div>
             <!-- 4pm -->
-          <div class= "input-group row time-block">
+          <div class= "input-group row time-block data-time="15"">
             <div class="input-group-prepend">
               <span class="input-group-text hour">04:00 PM</span>
             </div>
-              <textarea class=" form-control info description" id="9am-events"></textarea>
+              <textarea class="form-control info description" id="9am-events"></textarea>
             <div class="input-group-append">
               <button class="btn saveBtn" data-id="9am"  type="button"><i class="material-icons">Save</i></button>
             </div>
           </div>
             <!-- 5pm -->
-          <div class= "input-group row time-block">
+          <div class= "input-group row time-block data-time="16"">
             <div class="input-group-prepend">
               <span class="input-group-text hour">05:00 PM</span>
             </div>
-              <textarea class=" form-control info description" id="9am-events"></textarea>
+              <textarea class="form-control info description" id="9am-events"></textarea>
             <div class="input-group-append">
               <button class="btn saveBtn" data-id="9am"  type="button"><i class="material-icons">Save</i></button>
             </div>
           </div>
+          
              
     </div>
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script type="text/javascript" src="./script.js">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.18.1/moment.min.js"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
   </body>
 </html>
